@@ -188,7 +188,8 @@ function BodyReader(options) {
         "v:textbox": readChildElements,
         "w:txbxContent": readChildElements,
         "wp:inline": readDrawingElement,
-        "wp:anchor": readDrawingElement
+        "wp:anchor": readDrawingElement,
+        "v:imagedata": readImageData
     };
     return {
         readXmlElement: readXmlElement,
@@ -234,6 +235,12 @@ function BodyReader(options) {
                 read: files.read.bind(files, imagePath)
             };
         }
+    }
+    
+    function readImageData(element) {
+        return readImage(
+            findEmbeddedImageFile(element.attributes["r:id"]),
+            element.attributes["o:title"]);
     }
     
     function findEmbeddedImageFile(relationshipId) {
